# unity_gazebo_ros

./: 2021-08-26-13-04-37.bag  2021-08-26-13-06-29.bag  2021-08-26-13-25-40.bag  2021-08-26-13-27-26.bag  2021-08-26-14-48-35.bag  2021-08-26-14-49-12.bag  README.md  logger.py  newpos.txt  setTCPserver.sh  spawn_model.sh  subscribetoROSTOPIC.sh
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/unity_robotics_demo_msgs/: PosRot.h  PositionServiceRequest.h  PositionServiceResponse.h
devel/lib/effort_controllers/: simple_bot_hw
devel/lib/file_server/: file_server
devel/lib/pkgconfig/: cube_control.pc  cube_description.pc  cube_gazebo.pc  effort_controllers.pc  file_server.pc  robo_simulation.pc  ros_tcp_endpoint.pc  unity_robotics_demo_msgs.pc
devel/lib/python3/dist-packages/ros_tcp_endpoint/: __init__.py
devel/lib/python3/dist-packages/unity_robotics_demo_msgs/msg/: _PosRot.py
devel/lib/python3/dist-packages/unity_robotics_demo_msgs/srv/: _PositionService.py
devel/lib/robo_simulation/: unity_subscribe
devel/share/common-lisp/ros/unity_robotics_demo_msgs/msg/: PosRot.lisp
devel/share/common-lisp/ros/unity_robotics_demo_msgs/srv/: PositionService.lisp
devel/share/cube_control/cmake/: cube_controlConfig.cmake
devel/share/cube_description/cmake/: cube_descriptionConfig.cmake
devel/share/cube_gazebo/cmake/: cube_gazeboConfig.cmake
devel/share/effort_controllers/cmake/: effort_controllersConfig.cmake
devel/share/file_server/cmake/: file_server-msg-extras.cmake  file_serverConfig.cmake
devel/share/gennodejs/ros/unity_robotics_demo_msgs/msg/: PosRot.js
devel/share/robo_simulation/cmake/: robo_simulationConfig.cmake
devel/share/ros_tcp_endpoint/cmake/: ros_tcp_endpointConfig.cmake
devel/share/roseus/ros/file_server/: manifest.l
devel/share/roseus/ros/unity_robotics_demo_msgs/: manifest.l
devel/share/unity_robotics_demo_msgs/cmake/: unity_robotics_demo_msgs-msg-extras.cmake  unity_robotics_demo_msgs-msg-paths.cmake  unity_robotics_demo_msgsConfig.cmake
src/: logger.py  storetocsv.py
src/cube_control/: CMakeLists.txt
src/cube_control/config/: cube_control.yaml  moving_cube.yaml
src/cube_control/launch/: moving_cube_control.launch
src/cube_description/: CMakeLists.txt  package.xml
src/cube_description/launch/: cube_rviz.launch  gazebo.launch  spawn.launch
src/cube_description/src/: unity_subscribe.cpp
src/cube_description/urdf/: object.urdf
src/cube_gazebo/: CMakeLists.txt  package.xml
src/cube_gazebo/launch/: mybox_world.launch
src/cube_gazebo/world/: object.world
src/file_server/launch/: publish_description_turtlebot2.launch
src/robo_simulation/: CMakeLists.txt  package.xml
src/robo_simulation/launch/: unity_subscribe.launch
src/robo_simulation/models/: modelPlugin.world
src/robo_simulation/src/: GazeboPlugin.cpp  unity_subscribe.cpp
src/unity_robotics_demo_msgs/msg/: PosRot.msg
(+3 files in other folders)
