<?xml version="1.0"?>
<package format="2">
  <name>cube_gazebo</name>
  <version>0.0.0</version>
  <description>The cube_gazebo package</description>


  <maintainer email="akash13leena@gmail.com">akashleena</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cube_description</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>cube_description</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>cube_description</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>





</package>
